[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
pedantic = "warn"

[dependencies]
color-eyre = "0.6.2"
regex = "1.10.2"
aoc-macro = { path = "../aoc/aoc-macro" }
winnow = { version = "0.5.20", features = ["simd"] }
atoi_simd = "0.15.5"
log = { version = "0.4.20", features = ["std"] }
env_logger = "0.10.1"
