[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
regex = "1.10.2"
winnow = { version = "0.5.26", features = ["simd"] }
log = { version = "0.4.20", features = ["std"] }
env_logger = "0.10.1"
rayon = "1.8.0"
num = "0.4.1"
itertools = "0.12.0"
